# llm-router

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  PROMPT.md  README.md  build.rs  index.html  package.json  router.yaml
adapter-claude/: Cargo.toml
adapter-claude/src/: lib.rs
adapter-openai/: Cargo.toml
adapter-openai/src/: lib.rs
app/src-tauri/: Cargo.toml
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: main.rs  tauri_api.rs
core/: Cargo.toml
core/src/: app_state.rs  lib.rs
core/src/auth/: codex.rs  copilot.rs  mod.rs
core/src/config/: mod.rs
core/src/db/: account.rs  chat.rs  logging.rs  mod.rs  requests.rs  usage.rs
core/src/logging/: mod.rs
core/src/persistence/: mod.rs
core/src/providers/: claude.rs  copilot.rs  deepseek.rs  mod.rs  openai.rs  openai_compat.rs  openai_compatible.rs  upstream_logging.rs
core/src/router/: api.rs  chat_completions.rs  helpers.rs  mod.rs  responses.rs
crates/accounts/: Cargo.toml
crates/accounts/src/: handle.rs  pool.rs  registry.rs  routing.rs
crates/auth/: Cargo.toml
crates/auth/src/: descriptor.rs  lib.rs  provider.rs  store.rs
crates/catalogue/: Cargo.toml  build.rs
crates/catalogue/src/: lib.rs
crates/catalogue/src/catalogue/: loader.rs  mapping.rs  mod.rs
crates/config/: Cargo.toml
crates/config/src/: error.rs  lib.rs  paths.rs  profiles.rs  profiles.toml
crates/convert/: Cargo.toml
crates/convert/examples/: extras_stats.rs
crates/convert/src/: chat.rs  ir.rs  lib.rs  messages.rs  responses.rs  sse.rs  tools.rs  usage.rs
crates/convert/src/convert/: chat.rs  sse.rs
crates/convert/src/sse/: accumulate.rs  codec.rs  event.rs  mod.rs  pipeline.rs  translate.rs
crates/convert/tests/: golden_chat_to_responses.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: account.rs  agent_id.rs  client_id.rs  config.rs  db.rs  event.rs  lib.rs  pipeline.rs  provider.rs
crates/core/src/provider/: error.rs
crates/core/src/request_event/: mod.rs  record.rs  stage.rs
crates/core/src/util/: http.rs  initiator.rs  mod.rs  paths.rs  redact.rs  secret.rs  timefmt.rs  version.rs
crates/endpoint-chat-completions/: Cargo.toml
crates/endpoint-chat-completions/src/: content.rs  event.rs  extra_keys_impls.rs  lib.rs  message.rs  parameters.rs  request.rs  response.rs  usage.rs
crates/endpoint-chat-completions/tests/: round_trip.rs
crates/endpoint-core/: Cargo.toml
crates/endpoint-core/src/: extra_keys_impls.rs  extras.rs  lenient.rs  lib.rs  tool.rs
crates/endpoint-macros/: Cargo.toml
crates/endpoint-macros/src/: lib.rs
crates/endpoint-messages/: Cargo.toml
crates/endpoint-messages/src/: content.rs  event.rs  extra_keys_impls.rs  lib.rs  message.rs  parameters.rs  request.rs  response.rs  usage.rs
crates/endpoint-messages/tests/: round_trip.rs
crates/endpoint-responses/: Cargo.toml
crates/endpoint-responses/src/: content.rs  event.rs  extra_keys_impls.rs  item.rs  lib.rs  parameters.rs  request.rs  response.rs  usage.rs
crates/endpoint-responses/tests/: round_trip.rs
crates/gateway-cli/: Cargo.toml
crates/gateway-cli/src/: auth_registry.rs  config.rs  error.rs  logging.rs  main.rs  progress.rs  provider.rs  server_runtime.rs  util.rs
crates/gateway-cli/src/catalogue/: loader.rs  mapping.rs  schema.rs
crates/gateway-cli/src/cli/: account.rs  config_cmd.rs  headers.rs  import.rs  login.rs  migration.rs  mod.rs  onboarding.rs  proxy.rs  serve.rs  smoke.rs  update.rs  usage.rs
crates/gateway-cli/src/config/: error.rs  mod.rs  paths.rs
crates/gateway-cli/src/convert/: error.rs  responses.rs
crates/gateway-cli/src/db/: archive.rs  mod.rs  requests.rs  sessions.rs  usage.rs
crates/gateway-cli/src/pool/: affinity.rs  mod.rs
crates/gateway-cli/src/provider/: error.rs  mod.rs
crates/gateway-cli/src/server/: chat.rs  mod.rs
crates/gateway-cli/src/util/: mod.rs  secret.rs
crates/gateway-cli/tests/: opencode_mock_server_e2e.rs
crates/headers/: Cargo.toml  build.rs
crates/headers/src/: agent.rs  keys.rs  lib.rs  name.rs  persona.rs  registry.rs  version.rs
crates/headers/tests/: real_world_inbound.rs
crates/headers/tests/fixtures/: inbound_real_world.json  user_agents.json
crates/mock-server/: Cargo.toml
crates/mock-server/src/: config.rs  lib.rs  route.rs  server.rs  tests.rs
crates/persistence/: Cargo.toml
crates/persistence/schemas/: README.md
crates/persistence/src/: archive.rs  lib.rs  migrate.rs  router2.rs  sessions.rs  usage.rs
crates/persistence/src/requests/: legacy.rs  mod.rs  stages.rs
crates/persistence/tests/: request_events.rs  router2.rs  schemas_v0_1_1.rs  v0_1_1.rs
crates/persistence/tests/fixtures/: v0.1.1.json
crates/provider-copilot/: Cargo.toml
crates/provider-copilot/src/: auth.rs  config.rs  github_copilot.rs  headers.rs  import.rs  lib.rs  models.rs  oauth.rs  token.rs  user.rs
crates/provider-copilot/src/github_copilot/: headers.rs  (+4 more)
crates/provider-deepseek/: Cargo.toml
crates/provider-deepseek/src/: auth.rs  deepseek.rs  lib.rs
crates/provider-llama-cpp/: Cargo.toml
crates/provider-llama-cpp/src/: auth.rs  lib.rs  llama_cpp.rs
crates/provider-openai/: Cargo.toml
crates/provider-openai/src/: auth.rs  auth_codex.rs  auth_openai.rs  codex.rs  common.rs  lib.rs  openai.rs
crates/provider-zai/: Cargo.toml
crates/provider-zai/src/: auth.rs  lib.rs  models.rs  quota.rs  zai.rs
crates/requests/: Cargo.toml
crates/requests/src/: lib.rs  test_support.rs
crates/requests/tests/: profile_smoke.rs
crates/router/: Cargo.toml
crates/router/src/: lib.rs  pipeline.rs  profiles.rs  profiles.toml  proxy.rs  registry.rs  routing.rs
crates/router/tests/: intercept_hosts_coverage.rs  passthrough_route.rs  proxy_passthrough_pipeline.rs
llm-routerd/: Cargo.toml
llm-routerd/src/: main.rs
plugin-defaults/: Cargo.toml
plugin-defaults/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/config/: credentials.yaml  providers.yaml
src-tauri/src/: lib.rs  main.rs  tauri_api.rs
src-tauri/src/auth/: copilot.rs
src-tauri/src/config/: mod.rs
src-tauri/src/router/: mod.rs
(+243 files in other folders)
