[workspace]
members = [
  "crates/core",
  "crates/config",
  "crates/catalogue",
  "crates/convert",
  "crates/router",
  "crates/gateway-cli",
  "crates/provider-copilot",
  "crates/provider-zai",
]
resolver = "2"

[workspace.dependencies]
llm-core = { path = "crates/core" }
llm-config = { path = "crates/config" }
llm-catalogue = { path = "crates/catalogue" }
llm-convert = { path = "crates/convert" }
llm-router = { path = "crates/router" }
llm-provider-copilot = { path = "crates/provider-copilot" }
llm-provider-zai = { path = "crates/provider-zai" }

anyhow = "1"
arc-swap = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
console = "0.15"
directories = "5"
eventsource-stream = "0.2"
futures = "0.3"
futures-util = "0.3"
flate2 = "1"
http = "1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
humantime = "2"
indicatif = "0.17"
inquire = { version = "0.7", default-features = false, features = ["crossterm"] }
notify = "6"
parking_lot = "0.12"
rcgen = { version = "0.14", features = ["crypto", "pem"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "socks"] }
rustls = "0.23"
rustls-pemfile = "2"
rpassword = "7"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.9"
snafu = "0.8"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
toml = "0.8"
toml_edit = "0.22"
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors", "request-id", "util"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
lzma-rust2 = "0.16.2"
zstd = "0.13"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1

[profile.dev.package.lzma-rust2]
opt-level = 3

[profile.dev.package.zstd]
opt-level = 3

[profile.dev.package.zstd-safe]
opt-level = 3

[profile.dev.package.zstd-sys]
opt-level = 3

[profile.test.package.lzma-rust2]
opt-level = 3

[profile.test.package.zstd]
opt-level = 3

[profile.test.package.zstd-safe]
opt-level = 3

[profile.test.package.zstd-sys]
opt-level = 3
