[workspace]
members = [
  "crates/tokn",
  "crates/core",
  "crates/config",
  "crates/auth",
  "crates/catalogue",
  "crates/convert",
  "crates/endpoint-core",
  "crates/endpoint-macros",
  "crates/endpoint-chat-completions",
  "crates/endpoint-responses",
  "crates/endpoint-messages",
  "crates/router",
  "crates/requests",
  "crates/accounts",
  "crates/gateway-cli",
  "crates/persistence",
  "crates/provider-copilot",
  "crates/provider-deepseek",
  "crates/provider-openai",
  "crates/provider-zai",
]
resolver = "2"

[workspace.package]
version = "0.1.1-rc.0"
edition = "2021"
documentation = "https://docs.rs/llm-router"
homepage = "https://github.com/agentic-rs/llm-router"
repository = "https://github.com/agentic-rs/llm-router"
license = "MIT"

[workspace.dependencies]
tokn = { version = "0.1.1-rc.0", path = "crates/tokn" }
llm-core = { version = "0.1.1-rc.0", path = "crates/core" }
llm-config = { version = "0.1.1-rc.0", path = "crates/config" }
llm-auth = { version = "0.1.1-rc.0", path = "crates/auth" }
llm-catalogue = { version = "0.1.1-rc.0", path = "crates/catalogue" }
llm-convert = { version = "0.1.1-rc.0", path = "crates/convert" }
llm-endpoint-core = { version = "0.1.1-rc.0", path = "crates/endpoint-core" }
llm-endpoint-macros = { version = "0.1.1-rc.0", path = "crates/endpoint-macros" }
llm-endpoint-chat-completions = { version = "0.1.1-rc.0", path = "crates/endpoint-chat-completions" }
llm-endpoint-responses = { version = "0.1.1-rc.0", path = "crates/endpoint-responses" }
llm-endpoint-messages = { version = "0.1.1-rc.0", path = "crates/endpoint-messages" }
llm-headers = { version = "0.1.1-rc.0", path = "crates/headers" }
llm-router = { version = "0.1.1-rc.0", path = "crates/router" }
llm-requests = { version = "0.1.1-rc.0", path = "crates/requests" }
llm-persistence = { version = "0.1.1-rc.0", path = "crates/persistence" }
llm-accounts = { version = "0.1.1-rc.0", path = "crates/accounts" }
llm-provider-copilot = { version = "0.1.1-rc.0", path = "crates/provider-copilot" }
llm-provider-deepseek = { version = "0.1.1-rc.0", path = "crates/provider-deepseek" }
llm-provider-openai = { version = "0.1.1-rc.0", path = "crates/provider-openai" }
llm-provider-zai = { version = "0.1.1-rc.0", path = "crates/provider-zai" }

anyhow = "1"
arc-swap = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
console = "0.15"
directories = "5"
eventsource-stream = "0.2"
futures = "0.3"
futures-util = "0.3"
flate2 = "1"
http = "1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
humantime = "2"
ipnet = "2"
indicatif = "0.17"
inquire = { version = "0.7", default-features = false, features = ["crossterm"] }
notify = "6"
parking_lot = "0.12"
rcgen = { version = "0.14", features = ["crypto", "pem"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "socks", "gzip", "brotli", "deflate", "zstd"] }
rustls-native-certs = "0.8"
rustls = "0.23"
rustls-pemfile = "2"
rpassword = "7"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.9"
smol_str = { version = "0.3", features = ["serde"] }
snafu = "0.8"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
toml = "0.8"
toml_edit = "0.22"
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors", "request-id", "util"] }
thiserror = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
lzma-rust2 = "0.16.2"
zstd = "0.13"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1

[profile.dev.package.lzma-rust2]
opt-level = 3

[profile.dev.package.zstd]
opt-level = 3

[profile.dev.package.zstd-safe]
opt-level = 3

[profile.dev.package.zstd-sys]
opt-level = 3

[profile.test.package.lzma-rust2]
opt-level = 3

[profile.test.package.zstd]
opt-level = 3

[profile.test.package.zstd-safe]
opt-level = 3

[profile.test.package.zstd-sys]
opt-level = 3
