[workspace]
members = [
  "crates/tokn",
  "crates/mock-server",
  "crates/core",
  "crates/config",
  "crates/auth",
  "crates/catalogue",
  "crates/convert",
  "crates/endpoint-core",
  "crates/endpoint-macros",
  "crates/endpoint-chat-completions",
  "crates/endpoint-responses",
  "crates/endpoint-messages",
  "crates/router",
  "crates/requests",
  "crates/accounts",
  "crates/gateway-cli",
  "crates/persistence",
  "crates/provider-copilot",
  "crates/provider-deepseek",
  "crates/provider-openai",
  "crates/provider-zai",
]
resolver = "2"

[workspace.package]
version = "0.2.0-rc.1"
edition = "2021"
documentation = "https://docs.rs/tokn-router"
homepage = "https://github.com/agentic-rs/tokn"
repository = "https://github.com/agentic-rs/tokn"
license = "MIT"

[workspace.dependencies]
tokn = { version = "0.2.0-rc.1", path = "crates/tokn" }
tokn-mock-server = { version = "0.2.0-rc.1", path = "crates/mock-server" }
tokn-core = { version = "0.2.0-rc.1", path = "crates/core" }
tokn-config = { version = "0.2.0-rc.1", path = "crates/config" }
tokn-auth = { version = "0.2.0-rc.1", path = "crates/auth" }
tokn-catalogue = { version = "0.2.0-rc.1", path = "crates/catalogue" }
tokn-convert = { version = "0.2.0-rc.1", path = "crates/convert" }
tokn-endpoint-core = { version = "0.2.0-rc.1", path = "crates/endpoint-core" }
tokn-endpoint-macros = { version = "0.2.0-rc.1", path = "crates/endpoint-macros" }
tokn-endpoint-chat-completions = { version = "0.2.0-rc.1", path = "crates/endpoint-chat-completions" }
tokn-endpoint-responses = { version = "0.2.0-rc.1", path = "crates/endpoint-responses" }
tokn-endpoint-messages = { version = "0.2.0-rc.1", path = "crates/endpoint-messages" }
tokn-headers = { version = "0.2.0-rc.1", path = "crates/headers" }
tokn-router = { version = "0.2.0-rc.1", path = "crates/router" }
tokn-requests = { version = "0.2.0-rc.1", path = "crates/requests" }
tokn-persistence = { version = "0.2.0-rc.1", path = "crates/persistence" }
tokn-accounts = { version = "0.2.0-rc.1", path = "crates/accounts" }
tokn-provider-copilot = { version = "0.2.0-rc.1", path = "crates/provider-copilot" }
tokn-provider-deepseek = { version = "0.2.0-rc.1", path = "crates/provider-deepseek" }
tokn-provider-openai = { version = "0.2.0-rc.1", path = "crates/provider-openai" }
tokn-provider-zai = { version = "0.2.0-rc.1", path = "crates/provider-zai" }

anyhow = "1"
arc-swap = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
console = "0.16"
directories = "6"
eventsource-stream = "0.2"
futures = "0.3"
futures-util = "0.3"
flate2 = "1"
http = "1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
humantime = "2"
ipnet = "2"
indicatif = "0.18"
inquire = { version = "0.9", default-features = false, features = ["crossterm"] }
notify = "8"
parking_lot = "0.12"
rcgen = { version = "0.14", features = ["crypto", "pem"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls", "socks", "gzip", "brotli", "deflate", "zstd", "form"] }
rustls-native-certs = "0.8"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rpassword = "7"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
smol_str = { version = "0.3", features = ["serde"] }
snafu = "0.9"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
toml = "1"
toml_edit = "0.25"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "request-id", "util"] }
thiserror = "2"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
lzma-rust2 = "0.16.2"
zstd = "0.13"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1

[profile.dev.package.lzma-rust2]
opt-level = 3

[profile.dev.package.zstd]
opt-level = 3

[profile.dev.package.zstd-safe]
opt-level = 3

[profile.dev.package.zstd-sys]
opt-level = 3

[profile.test.package.lzma-rust2]
opt-level = 3

[profile.test.package.zstd]
opt-level = 3

[profile.test.package.zstd-safe]
opt-level = 3

[profile.test.package.zstd-sys]
opt-level = 3
