[package]
name = "adapter-openai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
router-core = { path = "../router-core" }
serde_json.workspace = true
futures.workspace = true
chrono.workspace = true
uuid.workspace = true
