[package]
name = "llm-router-core"
version = "0.1.0"
edition = "2021"
description = "Core router engine for llm-router"
license = "MIT"

[lib]
name = "llm_router_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "linux-native"] }
notify = "7"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tower = "0.5"
