[package]
name = "llm-routerd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
adapter-claude = { path = "../adapter-claude" }
adapter-codex = { path = "../adapter-codex" }
adapter-copilot = { path = "../adapter-copilot" }
adapter-openai = { path = "../adapter-openai" }
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
futures.workspace = true
notify.workspace = true
plugin-api = { path = "../plugin-api" }
plugin-defaults = { path = "../plugin-defaults" }
router-core = { path = "../router-core" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
viewer-web = { path = "../viewer-web" }
