[package]
name = "plugin-defaults"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
parking_lot.workspace = true
plugin-api = { path = "../plugin-api" }
router-core = { path = "../router-core" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
