[package]
name = "llm-router"
version = "0.1.0"
edition = "2021"
description = "Desktop OpenAI-compatible router with pluggable providers"
authors = ["llm-router"]
license = "MIT"

[lib]
name = "llm_router"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "llm-router"
path = "src/main.rs"
test = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
notify = "7"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "linux-native"] }
tauri = { version = "2", features = [] }

[dev-dependencies]
http-body-util = "0.1"
hyper = "1"
tempfile = "3"
