[package]
name = "llm-accounts"
version.workspace = true
edition.workspace = true
description = "Account pooling, affinity, and model route resolution across tokn providers"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
llm-core = { workspace = true }
llm-auth = { workspace = true }
llm-config = { workspace = true }
llm-provider-copilot = { workspace = true }
llm-provider-deepseek = { workspace = true }
llm-provider-openai = { workspace = true }
llm-provider-zai = { workspace = true }
arc-swap = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
