[package]
name = "tokn-catalogue"
version.workspace = true
edition.workspace = true
description = "Model and provider catalogue loading and mapping utilities for tokn"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tokn-core = { workspace = true }
directories = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }
