[package]
name = "tokn-config"
version.workspace = true
edition.workspace = true
description = "Configuration loading and path resolution for tokn"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tokn-core = { workspace = true }
tokn-headers = { workspace = true }
anyhow = { workspace = true }
directories = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }
