[package]
name = "llm-convert"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
llm-core = { workspace = true }
bytes = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
llm-config = { workspace = true }
llm-endpoint-core = { workspace = true }
llm-endpoint-chat-completions = { workspace = true }
llm-endpoint-responses = { workspace = true }
llm-endpoint-messages = { workspace = true }
rusqlite = { workspace = true }
