[package]
name = "llm-convert"
version.workspace = true
edition.workspace = true
description = "Request and response conversion pipeline across tokn endpoint formats"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
llm-core = { workspace = true }
bytes = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
llm-config = { workspace = true }
llm-endpoint-core = { workspace = true }
llm-endpoint-chat-completions = { workspace = true }
llm-endpoint-responses = { workspace = true }
llm-endpoint-messages = { workspace = true }
rusqlite = { workspace = true }
