[package]
name = "tokn-core"
version.workspace = true
edition.workspace = true
description = "Core types, traits, provider contracts, and shared utilities for tokn"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tokn-headers = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
directories = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smol_str = { workspace = true }
sha2 = { workspace = true }
snafu = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
