[package]
name = "tokn-endpoint-core"
version.workspace = true
edition.workspace = true
description = "Shared endpoint primitives and traits used by tokn endpoint crates"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
