[package]
name = "tokn-endpoint-macros"
version.workspace = true
edition.workspace = true
description = "Procedural macros used by tokn endpoint schema crates"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
