[package]
name = "llm-endpoint-responses"
version.workspace = true
edition.workspace = true
description = "Typed schemas for OpenAI-compatible responses endpoints"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
llm-endpoint-core = { workspace = true }
llm-endpoint-macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
