[package]
name = "llm-gateway-cli"
version = "0.1.0"
edition = "2021"
description = "Local OpenAI-compatible API gateway for LLM providers"
license = "MIT OR Apache-2.0"
readme = "../../README.md"

[features]
default = ["lzma"]
lzma = ["dep:lzma-rust2"]

[[bin]]
name = "llm-gateway"
path = "src/main.rs"

[dependencies]
llm-core = { workspace = true }
llm-config = { workspace = true }
llm-catalogue = { workspace = true }
llm-convert = { workspace = true }
llm-router = { workspace = true }
llm-provider-copilot = { workspace = true }
llm-provider-zai = { workspace = true }
llm-auth = { workspace = true }
anyhow = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
console = { workspace = true }
directories = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
humantime = { workspace = true }
indicatif = { workspace = true }
inquire = { workspace = true }
notify = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
rpassword = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
snafu = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
lzma-rust2 = { workspace = true, optional = true }
zstd = { workspace = true }
