[package]
name = "llm-gateway-cli"
version.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
description = "CLI and local gateway runtime for serving OpenAI-compatible APIs via tokn"
license.workspace = true
readme = "../../README.md"

[features]
default = ["lzma"]
lzma = ["llm-persistence/lzma"]

[[bin]]
name = "llm-gateway"
path = "src/main.rs"

[dependencies]
llm-core = { workspace = true }
llm-config = { workspace = true }
llm-catalogue = { workspace = true }
llm-convert = { workspace = true }
llm-router = { workspace = true }
llm-requests = { workspace = true }
llm-persistence = { workspace = true }
llm-provider-copilot = { workspace = true }
llm-provider-deepseek = { workspace = true }
llm-provider-openai = { workspace = true }
llm-provider-zai = { workspace = true }
llm-auth = { workspace = true }
llm-headers = { workspace = true }
anyhow = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
console = { workspace = true }
directories = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
humantime = { workspace = true }
indicatif = { workspace = true }
inquire = { workspace = true }
notify = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
rpassword = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
