[package]
name = "tokn-headers"
version.workspace = true
edition.workspace = true
description = "Header schema, parsing, and persona utilities shared across tokn crates"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
http = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
smol_str = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
