[package]
name = "llm-persistence"
version.workspace = true
edition.workspace = true
description = "Persistence layer (sqlite writers, migrations, archival) for the llm-router workspace"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["lzma"]
lzma = ["dep:lzma-rust2"]

[dependencies]
llm-core = { workspace = true }
llm-headers = { workspace = true }
bytes = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
snafu = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
zstd = { workspace = true }
lzma-rust2 = { workspace = true, optional = true }

[dev-dependencies]
parking_lot = { workspace = true }
uuid = { workspace = true }
smol_str = { workspace = true }
serde_json = { workspace = true }
