[package]
name = "llm-provider-copilot"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
llm-core = { workspace = true }
llm-catalogue = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
parking_lot = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
