[package]
name = "llm-provider-copilot"
version.workspace = true
edition.workspace = true
description = "GitHub Copilot provider integration for tokn"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
llm-core = { workspace = true }
llm-auth = { workspace = true }
llm-catalogue = { workspace = true }
llm-headers = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
directories = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
parking_lot = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
