[package]
name = "tokn-provider-copilot"
version.workspace = true
edition.workspace = true
description = "GitHub Copilot provider integration for tokn"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tokn-core = { workspace = true }
tokn-auth = { workspace = true }
tokn-catalogue = { workspace = true }
tokn-headers = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
directories = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
parking_lot = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
